✨ offer data upgrade from v4 to v5
including copying data from internal (portable) location to the official location